--- a/src/WebLabs/static/scss/li_a_hover.scss
+++ b/src/WebLabs/static/scss/li_a_hover.scss
@@ -1,16 +1,18 @@
-.nav-justified > li:not(.active) > a:hover {
+.nav-justified > li {
+  &:not(.active) > a:hover {
     background-color: gray;
     color: black;
     font-size: larger;
     border: 2px solid black;
-}
+  }
 
-.nav-justified > li.active > a:not(hover) {
+  &.active > a:not(hover) {
     background-color: darkgray;
     color: darkgray;
     border: 4px solid gray;
+  }
 }
 
 section hr {
-    border-color:black;
+  border-color: black;
 }
